--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -12,7 +12,7 @@
                 <li data-index="rs-1" data-transition="fade" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="800" data-fsslotamount="7" data-saveperformance="off">
 
                     <!-- Background -->
-                    <img src="{{ asset('assets/images/slider-bg-01.jpg') }}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina data-kenburns="on" data-duration="12000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0">
+                    <img src="{{ asset('assets/colocation.jpg') }}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina data-kenburns="on" data-duration="12000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0">
 
                     <!-- Caption-->
                     <div class="tp-caption custom-caption-2 tp-shape tp-shapewrapper tp-resizeme rs-parallaxlevel-0"
@@ -51,10 +51,10 @@
                              data-basealign="slide"
                              data-responsive_offset="off"
                              data-responsive="off"
-                             style="z-index: 6; color: #fff; letter-spacing: 0px; font-weight: 600; ">Discover City Gems</div>
+                             style="z-index: 6; color: #fff; letter-spacing: 0px; font-weight: 600; ">Colocation</div>
 
-                        <div class="caption-text">Interactively procrastinate high-payoff content without backward-compatible data. Quickly cultivate optimal processes and tactical architectures.</div>
-                        <a href="#" class="button medium">Get Started</a>
+                        <div class="caption-text">Trouvez ou proposer une colocation <br> près d'Esprit en quelques cliques.</div>
+                        <a href="{{ path('colocations_index') }}" class="button medium">Colocations</a>
                     </div>
 
                 </li>
@@ -63,7 +63,7 @@
                 <li data-index="rs-2" data-transition="fade" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="800" data-fsslotamount="7" data-saveperformance="off">
 
                     <!-- Background -->
-                    <img src="{{ asset('assets/images/slider-bg-02.jpg') }}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina data-kenburns="on" data-duration="12000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="112" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0">
+                    <img src="{{ asset('assets/covoiturage.jpg') }}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina data-kenburns="on" data-duration="12000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="112" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0">
 
                     <!-- Caption-->
                     <div class="tp-caption centered custom-caption-2 tp-shape tp-shapewrapper tp-resizeme rs-parallaxlevel-0"
@@ -101,10 +101,10 @@
                              data-basealign="slide"
                              data-responsive_offset="off"
                              data-responsive="off"
-                             style="z-index: 6; color: #fff; letter-spacing: 0px; font-weight: 600; ">Streamline Your Business</div>
+                             style="z-index: 6; color: #fff; letter-spacing: 0px; font-weight: 600; ">Covoiturage</div>
 
-                        <div class="caption-text">Proactively envisioned multimedia based on expertise cross-media growth strategies. Pontificate installed base portals after maintainable products.</div>
-                        <a href="#" class="button medium">Read More</a>
+                        <div class="caption-text">Trouvez ou proposer le trajet de votre choix.</div>
+                        <a href="{{ path('covoiturage_index') }}" class="button medium">Covoiturages</a>
                     </div>
 
                 </li>
