--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,6 +68,10 @@
                             <li><a href="{{ path('colocations_index') }}">Colocations</a>
                             </li>
 
+                            <li>
+                                <a href="{{ path('covoiturage_index') }}">Covoiturages</a>
+                            </li>
+                            
                             <li><a href="#">Objets</a>
                                 <ul>
                                     <li><a href="{{ path('objets_perdus_index') }}">Trouvés</a></li>
@@ -75,12 +79,7 @@
                                 </ul>
                             </li>
 
-                            <li><a href="#">Covoiturages</a>
-                                <ul>
-                                    <li><a href="{{ path('covoiturage_index') }}">Offres</a></li>
-                                    <li><a href="#">Demandes</a></li>
-                                </ul>
-                            </li>
+
                         </ul>
                     </nav>
                     <div class="clearfix"></div>
@@ -157,44 +156,21 @@
                 <div class="col-md-5 col-sm-6">
                     <img class="footer-logo" src="{{ asset('assets/images/logo2.png') }}" alt="">
                     <br><br>
-                    <p>Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.</p>
+                    <p>Esprit Entraide est une plateforme communautaire à Esprit.</p>
                 </div>
 
                 <div class="col-md-4 col-sm-6 ">
-                    <h4>Helpful Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Sign Up</a></li>
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="#">Add Listing</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                    </ul>
 
-                    <ul class="footer-links">
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Our Partners</a></li>
-                        <li><a href="#">How It Works</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                    <div class="clearfix"></div>
+
+
+
                 </div>
 
                 <div class="col-md-3  col-sm-12">
                     <h4>Contact Us</h4>
                     <div class="text-widget">
-                        <span>12345 Little Lonsdale St, Melbourne</span> <br>
-                        Phone: <span>(123) 123-456 </span><br>
-                        E-Mail:<span> <a href="#">office@example.com</a> </span><br>
+                        E-Mail:<span> <a href="#">contact@esprit-entraide.tn</a> </span><br>
                     </div>
-
-                    <ul class="social-icons margin-top-20">
-                        <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-                        <li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-                        <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-                        <li><a class="vimeo" href="#"><i class="icon-vimeo"></i></a></li>
-                    </ul>
 
                 </div>
 
@@ -203,7 +179,7 @@
             <!-- Copyright -->
             <div class="row">
                 <div class="col-md-12">
-                    <div class="copyrights">© 2017 Listeo. All Rights Reserved.</div>
+                    <div class="copyrights">© 2018 Esprit-Entraide. All Rights Reserved.</div>
                 </div>
             </div>
 
