--- a/src/AppBundle/Resources/views/covoiturage/index.html.twig
+++ b/src/AppBundle/Resources/views/covoiturage/index.html.twig
@@ -78,23 +78,8 @@
                             </div>
                             <hr>
                         {% endfor %}
-                        <!-- Pagination -->
-                        <div class="clearfix"></div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <!-- Pagination -->
-                                <div class="pagination-container margin-top-20 margin-bottom-40">
-                                    <nav class="pagination">
-                                        <ul>
-                                            <li><a href="#" class="current-page">1</a></li>
-                                            <li><a href="#">2</a></li>
-                                            <li><a href="#">3</a></li>
-                                            <li><a href="#"><i class="sl sl-icon-arrow-right"></i></a></li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                        </div>
+
+                        {{ knp_pagination_render(covoiturages) }}
                         <!-- Pagination / End -->
                     {% endif %}
                     <!-- Modal -->
